# tabdog

./: .gitignore  README.md
Extension/: PRIVACY_POLICY.md  background.js  manifest.json  package-lock.json  package.json  popup.html  sidepanel.html  svelte.config.js  tailwind.config.js  vite.config.js
Extension/config/: firebase-config.example.js  firestore.rules
Extension/popup/: popup.css  popup.html  popup.js
Extension/services/: auth.js  content-extractor.js  device.js  firestore.js  gemini-embeddings.js  gemini.js  session-history.js  share.js  sync.js  tab-history.js  workspace.js
Extension/src/: App.svelte  app.css
TabDog/TabDog/: AppDelegate.swift  Info.plist  TabDogApp.swift
TabDog/TabDog.xcodeproj/: project.pbxproj
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: chat.py  extract.py  health.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: chat.py  extract.py
backend/app/services/chat/: __init__.py  chat_service.py
backend/app/services/crawl/: __init__.py  content_normalizer.py  crawl4ai_service.py
backend/app/services/indexing/: __init__.py  chunker.py  gemini_embeddings.py  local_embeddings.py  vector_index.py
backend/app/services/llm/: __init__.py  gemini_chat.py
backend/app/services/retrieval/: hybrid_retriever.py
backend/app/services/storage/: file_store.py  sqlite_store.py
backend/scripts/: run_chat_stdin.py  test_chat.py
docs/: privacy-policy.html  share.html
promo/: index.html  package-lock.json  package.json  vite.config.js
scripts/: build-dmg.sh
(+91 files in other folders)
